# platform-mcp-server

./: .coverage  .gitignore  .pre-commit-config.yaml  PRD.md  README.md  azure-pipelines.yml  clusters.example.yaml  pyproject.toml  python-314-upgrade.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cov_annotate/: z_0ac95eb4feb24c32___init__.py,cover  z_0ac95eb4feb24c32_azure_aks.py,cover  z_0ac95eb4feb24c32_k8s_core.py,cover  z_0ac95eb4feb24c32_k8s_events.py,cover  z_0ac95eb4feb24c32_k8s_metrics.py,cover  z_0ac95eb4feb24c32_k8s_policy.py,cover  z_816a27d2ee9290ba___init__.py,cover  z_816a27d2ee9290ba_config.py,cover  z_816a27d2ee9290ba_models.py,cover  z_816a27d2ee9290ba_server.py,cover  z_816a27d2ee9290ba_validation.py,cover  z_9340299501288fe4___init__.py,cover  z_9340299501288fe4_k8s_upgrades.py,cover  z_9340299501288fe4_node_pools.py,cover  z_9340299501288fe4_pdb_check.py,cover  z_9340299501288fe4_pod_classification.py,cover  z_9340299501288fe4_pod_health.py,cover  z_9340299501288fe4_upgrade_metrics.py,cover  z_9340299501288fe4_upgrade_progress.py,cover
docs/: azure-devops-pr-ai-review.md  pydantic-models-and-alternatives.md
openspec/: project.md
openspec/changes/add-upgrade-pod-transitions/: proposal.md  tasks.md
scripts/: pr_ai_review.py
src/platform_mcp_server/: __init__.py  config.py  models.py  server.py  utils.py  validation.py
templates/: pr-ai-review.yml
tests/: conftest.py  test_config.py  test_coverage_gaps.py  test_k8s_upgrades.py  test_models.py  test_node_pools.py  test_pdb_check.py  test_pod_health.py  test_server.py  test_server_tools.py  test_upgrade_metrics.py  test_upgrade_progress.py  test_validation.py
tests/test_clients/: conftest.py  test_azure_aks.py  test_client_init.py  test_k8s_core.py  test_k8s_events.py  test_k8s_metrics.py  test_k8s_policy.py
(+36 files in other folders)
