[project]
name = "platform-mcp-server"
version = "0.1.0"
description = "Platform MCP Server — exposes AKS operational data to AI assistants via the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Platform Engineering" },
]
dependencies = [
    "mcp[cli]",
    "kubernetes",
    "azure-mgmt-containerservice",
    "azure-identity",
    "azure-mgmt-monitor",
    "pydantic>=2.0",
    "structlog",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
    "bandit[toml]>=1.9.4",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_mcp_server"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["platform_mcp_server"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["kubernetes.*", "azure.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/platform_mcp_server"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover", "if __name__ == .__main__.:"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
